--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ a {
     padding: 2.5% 3%;
     overflow: hidden;
     background-color: white;
+    background:linear-gradient(0deg,#ECE3CE 40%,#739072 60%,#4F6F52 80%,#3A4D39 100%);
 }
 
 
